--- a/src/App.css
+++ b/src/App.css
@@ -80,7 +80,7 @@ label {
   width: 100%;
   height: 100%;
   border-radius: 1rem;
-  /* object-fit: contain; */
+  object-fit: cover;
   object-position: center;
 }
 
